--- a/assets/scss/_btnsIcons.scss
+++ b/assets/scss/_btnsIcons.scss
@@ -9,6 +9,18 @@
 	padding: 1rem 5.4rem;
 	border-radius: 9.39rem;
 	margin-bottom: 2rem;
+	box-shadow: inset 0 0 0 0.1rem $secondary_color;
+	@include animation(box-shadow, background, color);
+
+	&:hover .btn__svg {
+		stroke: $primary_color;
+	}
+
+	&:hover {
+		background: transparent;
+		color: $primary_color;
+		box-shadow: inset 0 0 0 0.4rem $secondary_color;
+	}
 
 	&--text {
 		@extend %btn;
@@ -27,25 +39,13 @@
 			width: 2.3rem;
 			margin-right: 1rem;
 		}
+
 	}
 
 	&--loadmore:hover {
 		svg {
 			animation: 1.8s spin .6s linear infinite;
 		}
-	}
-}
-
-.loadmore__icon {
-	fill: none;
-	stroke: $secondary_color;
-	stroke-width: 3;
-	stroke-linecap: round;
-	stroke-linejoin: round;
-	stroke-miterlimit: 10;
-
-	polygon {
-		fill: $secondary_color;
 	}
 }
 
@@ -75,7 +75,24 @@
 		stroke-width: 0.75;
 		stroke-miterlimit: 10;
 	}
+	&--loadmore {
+		fill: none;
+		stroke: $secondary_color;
+		stroke-width: 3;
+		stroke-linecap: round;
+		stroke-linejoin: round;
+		stroke-miterlimit: 10;
 
+		polygon {
+			fill: $secondary_color;
+			stroke: none;
+		}
+	}
+	&--arrow-down {
+		fill: none;
+		stroke: #fff;
+		stroke-width: 3;
+	}
 }
 
 @keyframes spin {
