--- a/assets/scss/_some.scss
+++ b/assets/scss/_some.scss
@@ -1,13 +1,12 @@
 html {
-	line-height: 1;
-	font-size: 62.5%;
+	font-size: 10px;
 }
 
 body {
-	font: 16px/1.618 $primary_font, serif;
-	font-size: 1.6rem; /* Font-sizing with rem unit */
+	font-size: 1.5rem;
+	line-height: 2.4rem;
     font-weight: 400;
-  color: $primary_color;
+	color: $primary_color;
 }
 
 h2 {
