--- a/assets/scss/partials/_welcome.scss
+++ b/assets/scss/partials/_welcome.scss
@@ -8,11 +8,13 @@
   }
 
   .wrap {
-    background: url(assets/img/home-screen.jpg) no-repeat right bottom
+    background: url(assets/img/home-screen.jpg) no-repeat right bottom;
+    background-size: 128rem auto;
   }
 
   &__content {
     position: absolute;
+    font-size: 1.5rem;
     width: 37%;
     bottom: 0;
   }
