--- a/dev/partials/testimonials.html
+++ b/dev/partials/testimonials.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="text-center testimonials__loadmore js_loadmore"><button class="btn--text btn--loadmore btn--icon"><?xml version="1.0" encoding="utf-8"?>
-            <svg class="loadmore__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg class="svg--loadmore" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 41 41" style="enable-background:new 0 0 41 41;" xml:space="preserve">
                     <g>
                         <path class="st0" d="M9,30.3c3.7,4.5,9.4,6.3,14.7,5.3"/>
