--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -22,6 +22,7 @@ $font-size-base:            0.625rem;
 
 // Breakpoints
 
+$grid-xs-min:   400px;
 $grid-xs-max:   575px;
 $grid-sm-min:   576px;
 $grid-sm-max:   767px;
