--- a/dev/partials/services.html
+++ b/dev/partials/services.html
@@ -7,10 +7,11 @@
         </header>
         <div class="services__container">
             <div class="services__row">
-                <div class="wrap wrap--flex">
-                    <div class="services__block service service--with-icon js_service__info">
-                        <div class="service__icon svg-icon svg--document svg--animate">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <div class="wrap wrap--grid">
+                    <div class="services__column col-1-2">
+                        <div class="service service--with-icon js_service__info">
+                            <div class="service__icon svg-icon svg--document svg--animate">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 22 22" style="enable-background:new 0 0 22 22;" xml:space="preserve">
                                 <rect x="0.7" y="0.8" class="st0 svg__st" width="20.7" height="18.7"/>
                                 <line x1="4.5" y1="0.8" x2="4.5" y2="19.5"/>
@@ -23,31 +24,33 @@
                                 <line x1="10.7" y1="8.3" x2="16.4" y2="8.3"/>
                                 <line x1="10.7" y1="10.2" x2="19.2" y2="10.2"/>
                             </svg>
-                        </div>
-                        <h4 class="service__heading">Наведение порядка<br>
-                            в делах</h4>
-                        <span class="service__text">Аудит документов и платежей на предмет:</span>
-                        <ul class="list list--with-icon">
-                            <li>соблюдения необходимых формальностей и
-                                процедур,
-                            </li>
-                            <li>наличия всех оригиналов договоров, актов,</li>
-                            <li>легализация зависших платежей.</li>
-                        </ul>
-                        <div class="service__info">
-                            <p class="h4">Наведение порядка<br>
-                                в делах</p>
-                            <p>Борьба внутри меня, и я был в самых разных
-                                ситуациях в моей жизни. <strong>Таким образом, борьба, что
-                                    у меня на постоянной основе, это просто пробовать
-                                    и быть лучше.</strong></p>
-                            <p>Есть определенная разница между публичным человеком и обычным человеком,
-                                это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
+                            <h4 class="service__heading">Наведение порядка<br>
+                                в делах</h4>
+                            <span class="service__text">Аудит документов и платежей на предмет:</span>
+                            <ul class="list list--with-icon">
+                                <li>соблюдения необходимых формальностей и
+                                    процедур,
+                                </li>
+                                <li>наличия всех оригиналов договоров, актов,</li>
+                                <li>легализация зависших платежей.</li>
+                            </ul>
+                            <div class="service__info">
+                                <p class="h4">Наведение порядка<br>
+                                    в делах</p>
+                                <p>Борьба внутри меня, и я был в самых разных
+                                    ситуациях в моей жизни. <strong>Таким образом, борьба, что
+                                        у меня на постоянной основе, это просто пробовать
+                                        и быть лучше.</strong></p>
+                                <p>Есть определенная разница между публичным человеком и обычным человеком,
+                                    это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="services__block service service--with-icon js_service__info">
-                        <div class="service__icon svg-icon svg--target svg--animate">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <div class="services__column col-1-2">
+                        <div class="service service--with-icon js_service__info">
+                            <div class="service__icon svg-icon svg--target svg--animate">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
                                 <g>
                                     <path class="svg__fl" d="M11.8,22.2c-4.5,0-8.1-3.6-8.1-8.1S7.4,6,11.8,6S20,9.6,20,14.1S16.3,22.2,11.8,22.2z M11.8,6.7
@@ -66,32 +69,34 @@
                                 </g>
                             </svg>
 
-                        </div>
-                        <h4 class="service__heading">Оптимизация
-                            договорных отношений </h4>
-                        <ul class="list list--with-icon">
-                            <li>Доработка, латание дыр и улучшение условий основных типовых договоров вашей компании
-                            </li>
-                            <li>Оформление сотрудников на оптимальных условиях ведения деятельности и налогообложения
-                            </li>
-                            <li>Составление договоров, соглашений о конфиденциальности, публичных офферт</li>
-                        </ul>
-                        <div class="service__info">
-                            <p class="h4">Наведение порядка<br>
-                                в делах</p>
-                            <p>Борьба внутри меня, и я был в самых разных
-                                ситуациях в моей жизни. <strong>Таким образом, борьба, что
-                                    у меня на постоянной основе, это просто пробовать
-                                    и быть лучше.</strong></p>
-                            <p>Есть определенная разница между публичным человеком и обычным человеком,
-                                это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
+                            <h4 class="service__heading">Оптимизация
+                                договорных отношений </h4>
+                            <ul class="list list--with-icon pad-r0">
+                                <li>Доработка, латание дыр и улучшение условий основных типовых договоров вашей компании
+                                </li>
+                                <li>Оформление сотрудников на оптимальных условиях ведения деятельности и налогообложения
+                                </li>
+                                <li>Составление договоров, соглашений о конфиденциальности, публичных офферт</li>
+                            </ul>
+                            <div class="service__info">
+                                <p class="h4">Наведение порядка<br>
+                                    в делах</p>
+                                <p>Борьба внутри меня, и я был в самых разных
+                                    ситуациях в моей жизни. <strong>Таким образом, борьба, что
+                                        у меня на постоянной основе, это просто пробовать
+                                        и быть лучше.</strong></p>
+                                <p>Есть определенная разница между публичным человеком и обычным человеком,
+                                    это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="services__row">
-                <div class="wrap wrap--flex">
-                    <div class="services__block service service--with-icon js_service__info">
+                <div class="wrap wrap--grid">
+                    <div class="services__column col-1-2">
+                        <div class="service service--with-icon js_service__info">
                         <div class="service__icon svg-icon svg--notepad svg--animate">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 24 23" style="enable-background:new 0 0 24 23;" xml:space="preserve">
@@ -139,7 +144,9 @@
                                 это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
                         </div>
                     </div>
-                    <div class="services__block service service--with-icon js_service__info">
+                    </div>
+                    <div class="services__column col-1-2">
+                        <div class="service service--with-icon js_service__info">
                         <div class="service__icon svg-icon svg--court svg--animate">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 25 25" style="enable-background:new 0 0 25 25;" xml:space="preserve">
@@ -196,6 +203,7 @@
                             <p>Есть определенная разница между публичным человеком и обычным человеком,
                                 это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
