--- a/assets/scss/_some.scss
+++ b/assets/scss/_some.scss
@@ -1,5 +1,9 @@
 html {
 	font-size: 10px;
+	-webkit-font-smoothing: antialiased;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: transparent;
+	min-width: 320px;
 }
 
 body {
@@ -7,6 +11,7 @@ body {
 	line-height: 2.4rem;
     font-weight: 400;
 	color: $primary_color;
+	min-width: 32rem;
 }
 
 h2 {
