--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,6 +31,7 @@
 @import "_post";            // стили поста
 @import "_libs";            // стили библиотек/плагинов
 
+@import "partials/_mobile-nav";
 @import "partials/_welcome";
 @import "partials/_services";
 @import "partials/_service";
