--- a/assets/scss/partials/_welcome.scss
+++ b/assets/scss/partials/_welcome.scss
@@ -32,9 +32,16 @@
     }
   }
 
+  &__play {
+    @extend %cam;
+    @include animation(opacity);
+  }
+
+
   .btn {
     margin-top: 2.5rem;
     margin-bottom: 6rem;
   }
+
 
 }
