--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -37,6 +37,7 @@
 @import "partials/_service";
 @import "partials/_testimonials";
 @import "partials/_contacts";
+@import "partials/_modal";
 
 
 @import "_adaptive";			// стили адаптивки
