--- a/dev/partials/welcome.html
+++ b/dev/partials/welcome.html
@@ -21,5 +21,14 @@
                 </svg>
                 Услуги и цены</a>
         </div>
+        <div class="welcome__play">
+            <button class="modal__link btn--play" data-url="https://www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
+                <svg class="svg--play" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 23.8 29.3" style="enable-background:new 0 0 23.8 29.3;" xml:space="preserve">
+                    <polygon class="st0" points="21.5,14.8 3.1,27.2 3.1,2.4 "/>
+                </svg>
+                <span>Смотреть видео</span>
+            </button>
+        </div>
     </div>
 </section>
