--- a/assets/scss/partials/_mobile-nav.scss
+++ b/assets/scss/partials/_mobile-nav.scss
@@ -6,6 +6,8 @@
   width: 100%;
   height: 100%;
   padding: 7rem 2rem 4rem;
+  top: 0;
+  left: 0;
   z-index: 5;
   transform: translateY(-100%) translateZ(0);
 
