--- a/assets/scss/partials/_testimonials.scss
+++ b/assets/scss/partials/_testimonials.scss
@@ -47,6 +47,23 @@
 
   &__video {
     height: 20rem;
+
+    .modal__link {
+      position: relative;
+      display: inline-block;
+
+      &:before {
+        @extend %cam;
+        content: '';
+        background: $color_white url('assets/img/svg/play.svg') no-repeat center;
+        background-size: 1rem 1.2rem;
+        border-radius: 50%;
+        width: 1rem;
+        height: 1.2rem;
+        z-index: 5;
+        padding: 2rem;
+      }
+    }
   }
 
   &__author-image {
