--- a/assets/scss/_adaptive.scss
+++ b/assets/scss/_adaptive.scss
@@ -112,6 +112,7 @@
       width: auto;
       height: auto;
       background: none;
+      border-radius: 0;
       font-size: 2rem;
       padding: 0;
 
