--- a/dev/partials/testimonials.html
+++ b/dev/partials/testimonials.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="testimonials__block testimonials__block_video col-1-3">
                     <div class="testimonials__video">
-                        <span class="modal__link" data-url="https://www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
+                        <span class="modal__link" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
                             <img src="assets/img/testimonials-video1.jpg" alt="video screen" >
                         </span>
                     </div>
