add roles and change some div to more semantic tags

--- a/dev/partials/footer.html
+++ b/dev/partials/footer.html
@@ -23,6 +23,6 @@
                 </div>
             </a>
         </div>
-        <p class="footer__copyright">© 2015, <b>Pravo agency</b></p>
+        <p class="footer__copyright" role="contentinfo">© 2015, <b>Pravo agency</b></p>
     </div>
 </footer>
