--- a/dev/partials/header.html
+++ b/dev/partials/header.html
@@ -3,7 +3,7 @@
         <a href="/" class="header__logo"><img src="assets/img/svg/logo.svg" alt="pravo agency logo" scale="0"/></a>
 
         <div class="header__block">
-            <nav class="header__nav">
+            <nav class="header__nav" role="navigation">
                 <ul class="header__menu">
                     <li><a href="#services">Услуги и цены</a></li>
                     <li><a href="#testimonials">Отзывы</a></li>
