--- a/assets/scss/partials/_testimonials.scss
+++ b/assets/scss/partials/_testimonials.scss
@@ -51,6 +51,7 @@
     .modal__link {
       position: relative;
       display: inline-block;
+      width: 100%;
 
       &:before {
         @extend %cam;
