--- a/assets/scss/_btnsIcons.scss
+++ b/assets/scss/_btnsIcons.scss
@@ -22,6 +22,10 @@
 		box-shadow: inset 0 0 0 0.4rem $secondary_color;
 	}
 
+	&__text-mobile {
+		display: none;
+	}
+
 	&--text {
 		@extend %btn;
 		background: none;
@@ -42,19 +46,19 @@
 
 	}
 
-	&--play {
+	&--in-circle {
 		position: relative;
 		width: 9rem;
 		height: 9rem;
-		padding: 3.65rem;
+		padding: 0;
 		border-radius: 50%;
 		border: none;
 		background: white;
 		cursor: pointer;
 		z-index: 5;
 
-		span {
-			display: none;
+		svg {
+			@extend %cam;
 		}
 
 		&:hover svg {
