--- a/dev/partials/testimonials.html
+++ b/dev/partials/testimonials.html
@@ -11,7 +11,7 @@
                         Мы все хотим ее, но не знаем как получить, поэтому все,
                         что мы делаем, — это всего лишь попытки найти счастье.</p>
                     <div class="testimonials__author-image">
-                        <img src="assets/img/testimonials-photo1.jpg" alt="author photo">
+                        <img class="img--responsive" src="assets/img/testimonials-photo1.jpg" alt="author photo">
                     </div>
                     <footer class="testimonials__meta">
                         <p class="testimonials__author-name">Алексей Фёдоров</p>
@@ -23,7 +23,7 @@
                         Мы все хотим ее, но не знаем как получить, поэтому все,
                         что мы делаем, — это всего лишь попытки найти счастье.</p>
                     <div class="testimonials__author-image">
-                        <img src="assets/img/testimonials-photo2.jpg" alt="author photo">
+                        <img class="img--responsive" src="assets/img/testimonials-photo2.jpg" alt="author photo">
                     </div>
                     <footer class="testimonials__meta">
                         <p class="testimonials__author-name">Артур Оруджалиев</p>
@@ -33,7 +33,7 @@
                 <blockquote class="testimonials__block testimonials__block_video col-1-3">
                     <div class="testimonials__video">
                         <span class="modal__link" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
-                            <img src="assets/img/testimonials-video1.jpg" alt="video screen" >
+                            <img class="img--responsive" src="assets/img/testimonials-video1.jpg" alt="video screen" >
                         </span>
                     </div>
                     <footer class="testimonials__meta">
