--- a/dev/partials/header.html
+++ b/dev/partials/header.html
@@ -1,6 +1,6 @@
 <header id="header" class="header">
     <div class="wrap wrap--left">
-        <a href="/" class="header__logo"><img src="assets/img/svg/logo.svg" alt="pravo agency logo" scale="0"/></a>
+        <a href="/" class="header__logo"><img src="assets/img/svg/logo.svg" alt="pravo agency logo"/></a>
 
         <div class="header__block">
             <nav class="header__nav" role="navigation">
