--- a/dev/partials/services.html
+++ b/dev/partials/services.html
@@ -57,7 +57,7 @@
                                         <div class="table">
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">< 50<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&lt; 50<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">5000 грн</span></p>
@@ -73,7 +73,7 @@
                                             </div>
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">> 100<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&gt; 100<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">25000 грн</span></p>
@@ -141,7 +141,7 @@
                                         <div class="table">
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">< 50<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&lt; 50<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">5000 грн</span></p>
@@ -157,7 +157,7 @@
                                             </div>
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">> 100<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&gt; 100<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">25000 грн</span></p>
@@ -233,7 +233,7 @@
                                         <div class="table">
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">< 50<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&lt; 50<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">5000 грн</span></p>
@@ -249,7 +249,7 @@
                                             </div>
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">> 100<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&gt; 100<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">25000 грн</span></p>
@@ -332,7 +332,7 @@
                                         <div class="table">
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">< 50<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&lt; 50<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">5000 грн</span></p>
@@ -348,7 +348,7 @@
                                             </div>
                                             <div class="table__cell">
                                                 <div class="table__column">
-                                                    <p class="table__heading">> 100<span>Сотрудников</span></p>
+                                                    <p class="table__heading">&gt; 100<span>Сотрудников</span></p>
                                                 </div>
                                                 <div class="table__column">
                                                     <p>от <span class="strong text--bigger">25000 грн</span></p>
