--- a/dev/partials/testimonials.html
+++ b/dev/partials/testimonials.html
@@ -43,7 +43,7 @@
                 </blockquote>
             </div>
         </div>
-        <div class="text-center testimonials__loadmore js_loadmore"><button class="btn--text btn--loadmore btn--icon"><?xml version="1.0" encoding="utf-8"?>
+        <div class="text-center testimonials__loadmore js_loadmore"><button class="btn--text btn--loadmore btn--icon">
             <svg class="svg--loadmore" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 41 41" style="enable-background:new 0 0 41 41;" xml:space="preserve">
                     <g>
